Issue #1635: Fixed overlapping language labels

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -49,6 +49,10 @@
   margin-bottom: 5px;
 }
 
+.profile-item > span {
+  padding: 1px;
+}
+
 .tiny-title {
   text-transform: uppercase;
   color: #888;
